desktop version complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <!--Company Header -->
-      <div class="title">
+      <div class="company">
         <div class="container">
           <img src="./resources/logo.png">
           <span>SECRET AGENT SUPPLY INC.</span>
@@ -42,31 +42,38 @@
     <!-- Main Content - Products and Info -->
     <div class="container">
       <div class="gear">
-        <div class="product" id="pen">
-          <img src="./resources/pen.png">
+        <div class="products">
+          <div class="product-image">
+            <img src="./resources/pen.png">
+          </div>
           <span class="description">Exploding Pen</span>
         </div>
-        <div class="product" id="watch">
-          <img src="./resources/watch.png">
+        <div class="products">
+          <div class="product-image">
+            <img src="./resources/watch.png">
+          </div>
           <span class="description">Exploding Pen</span>
         </div>
-        <div class="product" id="glasses">
-          <img src="./resources/glasses.png">
+        <div class="products">
+          <div class="product-image">
+            <img src="./resources/glasses.png">
+          </div>
           <span class="description">Thermal Glasses</span>
         </div>
       </div>
-      <div class="container">
-        <div class="business info"
-          <div class="info" id="location">
-            <span>Location</span>
+    </div>
+    <div class="container">
+      <div class="business-info">
+        <div class="info">
+            <span class="title">Location</span>
             <span>-47.346436, 84.32354</span>
-          </div>
-          <div class="info" id="hours">
-            <span>Hours</span>
+        </div>
+        <div class="info">
+            <span class="title">Hours</span>
             <span>0800-1800</span>
-          </div>
         </div>
       </div>
+    </div>
     </div>
     <footer>
       <div class="container">
