--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
      <!-- Navigation -->
       <nav>
-        <ul class="container">
+        <ul class="container" id="nav-menu">
           <li>Eyewear</li>
           <li>Apparel</li>
           <li>Gadgets</li>
@@ -42,19 +42,19 @@
     <!-- Main Content - Products and Info -->
     <div class="container">
       <div class="gear">
-        <div class="products">
+        <div class="products" id="pen">
           <div class="product-image">
             <img src="./resources/pen.png">
           </div>
           <span class="description">Exploding Pen</span>
         </div>
-        <div class="products">
+        <div class="products" id="watch">
           <div class="product-image">
             <img src="./resources/watch.png">
           </div>
-          <span class="description">Exploding Pen</span>
+          <span class="description">Cellular Watch</span>
         </div>
-        <div class="products">
+        <div class="products" id="glasses">
           <div class="product-image">
             <img src="./resources/glasses.png">
           </div>
